2009-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Go to next tape if device_start_file fail.
	* device-src/tape-device.c: write a filemark when a file is finished.
	* device-src/tape-device.h (TapeDevice): Remove first_file.

2009-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Fix for no index with application.
	* application-src/amstar.c: Improve error reporting.
	* application-src/amgtar.c: Improve error reporting.

2009-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Add TAR-BLOCKSIZE property.
	* man/xml-source/amgtar.8.xml; document TAR-BLOCKSIZE property.

2009-01-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check fallback_splitsize is smaller than
	                        physmem_total().
	* server-src/taper-mem-port-source.c: Dont; check physmem_available.

2009-01-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/server_util.c: New get_pending_cmd function.
	* server-src/server_util.h: get_pending_cmd prototype.
	* server-src/driver.c: Send message to dumper in ABORT command.
	* server-src/driverio.c: Send message to dumper in ABORT command.
	* server-src/dumper.c: Check for ABORT cmd.
	* server-src/reporter.c: Don't log duplicate
	                         'Not enough holding disk space' error

2009-01-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix result_argv subscript.

2009-01-08  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amfetchdump.c: Write to stderr.

2009-01-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c (tape_device_seek_file): Set is_eof to FALSE
	  after it is use.

2009-01-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Don't call changer_label() if a changer is not
	                      in use.

2009-01-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c: Set *result_argv to NULL on EOF.